<resources>
    <string name="app_name">TipNTax</string>
    <string name="calculate_button_name">Calculate TipNTax</string>
    <string name="browser_button_name">Visit</string>
    <string name="send_email_button_name">Send</string>
    <string name="amount_prompt">amount</string>
    <string name="total_label">total</string>
    <string name="url_prompt">http://beijinger.style</string>
    <string name="email_address_prompt">zyw870315@gmail.com</string>
    <string name="email_message_prompt">message content</string>


    <!-- TIP AND TAX CALCULATOR ACTIVITY -->
    <string name="title_activity_tip_calc">Tip Calculator</string>
    <string name="calculate_activity_button">Calculate</string>
    <string name="price">Price</string>
    <string name="percentage">Percent</string>
    <string name="percentage_prompt">Tip Percent</string>
    <string name="total">Total</string>
</resources>
